# src/app/feature/user/users.controller.ts
@@ -2,9 +2,11 @@ import {
   Body,
   Controller,
   Post,
+  UsePipes,
+  ValidationPipe,
 } from '@nestjs/common';
 import { UsersService } from './users.service';
-import { RegisterRequest } from './users.dto';
+import { LoginRequest, RegisterRequest } from './users.dto';
 import { Users } from 'typeorm-model/Users';
 
 @Controller('users')
@@ -13,7 +15,15 @@ export class UsersController {
 
   // http://localhost:3000/user/register
   @Post('register')
+  @UsePipes(new ValidationPipe({ whitelist: true }))
   async register(@Body() data: RegisterRequest): Promise<Users> {
     return this.usersService.register(data);
+  }
+
+  // http://localhost:3000/user/login
+  @Post('login')
+  @UsePipes(new ValidationPipe({ whitelist: true }))
+  async login(@Body() data: LoginRequest) {
+    return this.usersService.login(data);
   }
 }
